[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Cards/cardClubs2.png" type="Texture" id=1]
[ext_resource path="res://card.gd" type="Script" id=2]

[node name="card" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.914286, 1.01053 )
texture = ExtResource( 1 )
centered = false

[node name="Control" type="Control" parent="."]
margin_right = 128.0
margin_bottom = 193.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_Control_mouse_exited"]
